Allow streaming from the /chat/completions route (#448)
* Allow streaming from the /chat/completions route

* Add test for 3.5 streaming

* Generate clients

* Various improvements from feedback

* Simplify /chat/completions flow

* Update test

* Properly reverse 3.5 conversion to tool calls

* Avoid double merging tool calls
