# app/src/modelProviders/fine-tuned/getCompletion-2.ts
@@ -3,8 +3,12 @@ import { type FineTune } from "@prisma/client";
 import type {
   ChatCompletionMessage,
   ChatCompletion,
+  ChatCompletionCreateParamsNonStreaming,
+  ChatCompletionCreateParamsStreaming,
   ChatCompletionCreateParams,
+  ChatCompletionChunk,
 } from "openai/resources/chat";
+import { type Stream } from "openai/streaming";
 
 import { omit } from "lodash-es";
 import { runInference } from "~/server/modal-rpc/clients";
@@ -20,8 +24,20 @@ import { type TypedFineTune } from "~/types/dbColumns.types";
 
 export async function getCompletion2(
   fineTune: TypedFineTune,
+  input: ChatCompletionCreateParamsNonStreaming,
+): Promise<ChatCompletion>;
+export async function getCompletion2(
+  fineTune: TypedFineTune,
+  input: ChatCompletionCreateParamsStreaming,
+): Promise<Stream<ChatCompletionChunk>>;
+export async function getCompletion2(
+  fineTune: TypedFineTune,
   input: ChatCompletionCreateParams,
-): Promise<ChatCompletion> {
+): Promise<ChatCompletion | Stream<ChatCompletionChunk>>;
+export async function getCompletion2(
+  fineTune: TypedFineTune,
+  input: ChatCompletionCreateParams,
+): Promise<ChatCompletion | Stream<ChatCompletionChunk>> {
   if (fineTune.pipelineVersion < 1 || fineTune.pipelineVersion > 2) {
     throw new Error(
       `Model was trained with pipeline version ${fineTune.pipelineVersion}, but only versions 1-2 are currently supported.`,
@@ -34,27 +50,43 @@ export async function getCompletion2(
   const prunedInput = { messages: prunedMessages, ...omit(input, "messages") };
 
   if (fineTune.provider === "openai") {
-    const model = fineTune.openaiModelId;
-
-    if (!model) throw new Error("No OpenAI model ID found");
-
-    // TODO: create pipeline without this conversion once OpenAI supports tool_calls for their fine-tuned models
-
-    const completion = await getOpenaiCompletion(fineTune.projectId, {
-      // convert tool call input to function call input
-      ...convertToolCallInputToFunctionInput(prunedInput),
-      model,
-    });
-    if (completion.choices[0]?.message && input.tools?.length) {
-      // convert function call output to tool call output
-      completion.choices[0].message = convertFunctionMessageToToolCall(
-        completion.choices[0].message,
-      ) as ChatCompletionMessage;
-    }
-    return completion;
+    return getOpenAIFineTuneCompletion(fineTune, prunedInput);
   } else {
     return getModalCompletion(fineTune, prunedInput);
   }
+}
+
+async function getOpenAIFineTuneCompletion(
+  fineTune: FineTune,
+  input: ChatCompletionCreateParams,
+): Promise<ChatCompletion | Stream<ChatCompletionChunk>> {
+  const model = fineTune.openaiModelId;
+
+  if (!model) throw new Error("No OpenAI model ID found");
+
+  if (input.stream) {
+    // Skip tool call conversion for streaming
+    // Hopefully OpenAI will support tool calls for fine-tuned models soon
+    const completion = await getOpenaiCompletion(fineTune.projectId, {
+      ...input,
+      model,
+    });
+    return completion;
+  }
+
+  // TODO: create pipeline without this conversion once OpenAI supports tool_calls for their fine-tuned models
+  const completion = await getOpenaiCompletion(fineTune.projectId, {
+    ...convertToolCallInputToFunctionInput(input),
+    stream: false,
+    model,
+  });
+  if (completion.choices[0]?.message && input.tools?.length) {
+    // convert function call output to tool call output
+    completion.choices[0].message = convertFunctionMessageToToolCall(
+      completion.choices[0].message,
+    ) as ChatCompletionMessage;
+  }
+  return completion;
 }
 
 async function getModalCompletion(
